--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,29 @@
+@import url('https://fonts.googleapis.com/css2?family=Coustard&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+	h1 {
+		@apply text-5xl;
+	}
+
+	h2 {
+		@apply text-xl;
+	}
+
+	h3 {
+		@apply text-lg;
+	}
+}
+
+@layer components {
+	.btn {
+		@apply text-white text-xl text-center rounded-md shadow px-5 py-1 bg-green hover:bg-green-darker transition-all;
+	}
+
+	.input {
+		@apply bg-white text-xl rounded-md shadow w-60 px-5 py-2 focus:border-black focus:border-4;
+	}
+}
