--- a/src/index.css
+++ b/src/index.css
@@ -10,17 +10,25 @@
 	}
 
 	h2 {
-		@apply text-xl;
+		@apply text-2xl;
 	}
 
 	h3 {
-		@apply text-lg;
+		@apply text-base;
+	}
+
+	p {
+		@apply text-sm;
+	}
+
+	* {
+		@apply m-0 box-border;
 	}
 }
 
 @layer components {
 	.btn {
-		@apply text-white text-xl text-center rounded-md shadow px-5 py-1 bg-green hover:bg-green-darker transition-all;
+		@apply text-white text-xl text-center rounded-md shadow px-5 py-1 bg-brand-green hover:bg-brand-green-darker transition-all;
 	}
 
 	.input {
